--- a/index.html
+++ b/index.html
@@ -17,27 +17,45 @@
         #appLoadingIndicator {
             position: absolute;
             top: 50%;
-            margin-top: -15px;
+            margin-top: -8px;
             text-align: center;
             width: 100%;
-            height: 30px;
+            height: 16px;
             -webkit-animation-name: appLoadingIndicator;
             -webkit-animation-duration: 0.5s;
             -webkit-animation-iteration-count: infinite;
             -webkit-animation-direction: linear;
+            animation-name: appLoadingIndicator;
+            animation-duration: 0.5s;
+            animation-iteration-count: infinite;
+            animation-direction: linear;
         }
 
         #appLoadingIndicator > * {
-            background-color: #FFFFFF;
+            background-color: #c6cdbe;
             display: inline-block;
-            height: 30px;
-            -webkit-border-radius: 15px;
-            margin: 0 5px;
-            width: 30px;
+            height: 16px;
+			width: 16px;
+             -webkit-border-radius: 8px;
+            -moz-border-radius: 8px;
+            border-radius: 8px;
+            margin: 0 2px;
             opacity: 0.8;
         }
 
         @-webkit-keyframes appLoadingIndicator{
+            0% {
+                opacity: 0.8
+            }
+            50% {
+                opacity: 0
+            }
+            100% {
+                opacity: 0.8
+            }
+        }
+        
+        @keyframes appLoadingIndicator{
             0% {
                 opacity: 0.8
             }
