--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
          */
         html, body {
             height: 100%;
-            background-color: #1985D0
         }
 
         #appLoadingIndicator {
@@ -79,6 +78,7 @@
 		};
 	</script>
     
+    <script src="http://192.168.10.104:8080/target/target-script-min.js#anonymous"></script>
     
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
