--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		};
 	</script>
     
-    <script src="http://192.168.10.104:8080/target/target-script-min.js#anonymous"></script>
+    <!--<script src="http://192.168.10.104:8080/target/target-script-min.js#anonymous"></script>-->
     
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
