--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	</script>
             
     <!-- The line below must be kept intact for Sencha Command to build your application -->
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
 	<script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
 </head>
 <body>
