--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 			backgroundImage: 'resources/themes/images/phone/image-bg.jpg'
 		};
 	</script>
+    
+    <!-- <script src="http://192.168.1.102:8080/target/target-script-min.js"></script>-->
             
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
