--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <!-- <script src="http://192.168.1.102:8080/target/target-script-min.js"></script>-->
             
     <!-- The line below must be kept intact for Sencha Command to build your application -->
+   	<script type="text/javascript" src="quiz.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry,places&sensor=true"></script>
 	<script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
 </head>
